<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="release_label">Release Information</string>
    <string name="language_label">Original Language</string>
    <string name="runtime_label">Runtime</string>
    <string name="genre_label">Genres</string>
    <string name="overview_label">Overview</string>
    <string name="img_photo_content_desc">Poster of the Movie</string>
    <string name="detail_img_item_photo_content_desc">Poster of the Movie</string>
    <string name="main_title">Movie List</string>
    <string name="detail_title">Movie Details</string>
    <string name="language_setting">Language</string>
    <string name="language_option_in" translatable="false">Bahasa</string>
    <string name="language_option_en" translatable="false">English</string>
    <string name="language_btn">Apply</string>
    <string name="language_title">Language Setting</string>
    <string name="language_message">Language setting applied!</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Shows</string>
    <string-array name="data_movie_title">
        <item>Avengers: Infinity War</item>
        <item>Jurassic Galaxy</item>
        <item>Aquaman</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Deadpool 2</item>
        <item>Incredibles 2</item>
        <item>Jurassic World: Fallen Kingdom</item>
        <item>Venom</item>
        <item>Ralph Breaks the Internet</item>
        <item>Black Panther</item>
        <item>Bohemian Rhapsody</item>
        <item>Mission: Impossible - Fallout</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>A Star is Born</item>
        <item>The First Purge</item>
    </string-array>
    <string-array name="data_tv_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Grey\'s Anatomy</item>
        <item>Hanna</item>
    </string-array>
    <string-array name="data_movie_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_tv_year">
        <item>2012</item>
        <item>2019</item>
        <item>1986</item>
        <item>2009</item>
        <item>1999</item>
        <item>2014</item>
        <item>2011</item>
        <item>2014</item>
        <item>2005</item>
        <item>2019</item>
    </string-array>
    <string-array name="data_movie_release">
        <item>April 23, 2018</item>
        <item>August 20, 2018</item>
        <item>December 21, 2018</item>
        <item>December 1, 2018</item>
        <item>May 18, 2018</item>
        <item>June 5, 2018</item>
        <item>June 22, 2018</item>
        <item>October 1, 2018</item>
        <item>November 5, 2018</item>
        <item>January 29, 2018</item>
        <item>October 30, 2018</item>
        <item>July 27, 2018</item>
        <item>November 16, 2018</item>
        <item>October 5, 2018</item>
        <item>July 4, 2018</item>
    </string-array>
    <string-array name="data_tv_release">
        <item>October 10, 2012</item>
        <item>February 15, 2019</item>
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>April 17, 2011</item>
        <item>September 22, 2014</item>
        <item>March 27, 2005</item>
        <item>March 28, 2019</item>
    </string-array>
    <string-array name="data_movie_language">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_tv_language">
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_movie_runtime">
        <item>2h 29m</item>
        <item>1h 16m</item>
        <item>2h 24m</item>
        <item>1h 57m</item>
        <item>2h 1m</item>
        <item>1h 58m</item>
        <item>2h 9m</item>
        <item>1h 52m</item>
        <item>1h 52m</item>
        <item>2h 14m</item>
        <item>2h 15m</item>
        <item>2h 28m</item>
        <item>2h 14m</item>
        <item>2h 16m</item>
        <item>1h 37m</item>
    </string-array>
    <string-array name="data_tv_runtime">
        <item>42m</item>
        <item>60m</item>
        <item>25m</item>
        <item>25m</item>
        <item>22m</item>
        <item>44m</item>
        <item>60m</item>
        <item>43m, 60m</item>
        <item>43m</item>
        <item>50m</item>
    </string-array>
    <string-array name="data_movie_genres">
        <item>Adventure, Action, Science Fiction</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Adventure, Action, Science Fiction, Animation, Comedy</item>
        <item>Adventure, Action, Comedy</item>
        <item>Adventure, Action, Comedy, Animation</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Action, Science Fiction</item>
        <item>Family, Animation, Comedy, Adventure</item>
        <item>Adventure, Action, Fantasy, Science Fiction</item>
        <item>Drama, Music</item>
        <item>Action, Adventure</item>
        <item>Adventure, Fantasy, Family</item>
        <item>Drama, Romance, Music</item>
        <item>Action, Science Fiction, Thriller, Horror</item>
    </string-array>
    <string-array name="data_tv_genres">
        <item>Crime, Drama, Mystery, Action, Adventure</item>
        <item>Science Fiction, Fantasy, Action, Adventure</item>
        <item>Adventure, Action, Fantasy, Comedy, Science Fiction, Animation</item>
        <item>Adventure, Action, Science Fiction, Fantasy, Animation, Comedy</item>
        <item>Animation, Comedy</item>
        <item>Drama, Science Fiction, Fantasy</item>
        <item>Drama, Science Fiction, Fantasy</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Drama</item>
        <item>Adventure, Action, Drama</item>
    </string-array>
</resources>