<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/detail_img_item_photo"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/detail_img_item_photo_content_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/detail_tv_movie_title"
        style="@style/Text.Field.Large"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap"
        tools:text="Movie Title" />

    <TextView
        android:id="@+id/detail_tv_movie_year"
        style="@style/Text.Content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_movie_title"
        tools:text="Movie Release Year" />

    <TextView
        android:id="@+id/detail_tv_release_label"
        style="@style/Text.Field.Small"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/release_label"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_movie_year" />

    <TextView
        android:id="@+id/detail_tv_release_content"
        style="@style/Text.Content"
        android:layout_below="@id/detail_tv_release_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/detail_img_item_photo"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_release_label"
        tools:text="Release Date" />

    <TextView
        android:id="@+id/detail_tv_language_label"
        style="@style/Text.Field.Small"
        android:layout_below="@id/detail_tv_release_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/detail_img_item_photo"
        android:text="@string/language_label"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_release_content" />

    <TextView
        android:id="@+id/detail_tv_language_content"
        style="@style/Text.Content"
        android:layout_below="@id/detail_tv_language_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/detail_img_item_photo"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_language_label"
        tools:text="Movie Original Language" />

    <TextView
        android:id="@+id/detail_tv_runtime_label"
        style="@style/Text.Field.Small"
        android:layout_below="@id/detail_tv_language_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/detail_img_item_photo"
        android:text="@string/runtime_label"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_language_content" />

    <TextView
        android:id="@+id/detail_tv_runtime_content"
        style="@style/Text.Content"
        android:layout_below="@id/detail_tv_runtime_label"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/detail_img_item_photo"
        app:layout_constraintStart_toEndOf="@+id/detail_img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_runtime_label"
        tools:text="Movie Duration" />

    <TextView
        android:id="@+id/detail_tv_genre_label"
        style="@style/Text.Field.Medium"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_img_item_photo" />

    <TextView
        android:id="@+id/detail_tv_genre"
        style="@style/Text.Content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_genre_label"
        tools:text="Movie Genres" />

    <TextView
        android:id="@+id/detail_tv_overview_label"
        style="@style/Text.Field.Medium"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/overview_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_genre" />

    <TextView
        android:id="@+id/detail_tv_overview"
        style="@style/Text.Content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_overview_label"
        tools:text="Movie Overview" />
</androidx.constraintlayout.widget.ConstraintLayout>